# internal/dto/admin_transport.go
@@ -1,15 +1,17 @@
 package dto
 
+import "github.com/guregu/null"
+
 type AdminTransportDTO struct {
-	OwnerId       int     `json:"ownerId" validation:"required,number"`
-	CanBeRented   bool    `json:"canBeRented" validation:"required,boolean"`
-	TransportType string  `json:"transportType" validation:"required,oneof=Car Bike Scooter"`
-	Model         string  `json:"model" validation:"required"`
-	Color         string  `json:"color" validation:"required"`
-	Identifier    string  `json:"identifier" validation:"required"`
-	Description   string  `json:"description"`
-	Latitude      float32 `json:"latitude" validation:"required,latitude"`
-	Longitude     float32 `json:"longitude" validation:"required,longitude"`
-	MinutePrice   float32 `json:"minutePrice" validation:"number"`
-	DayPrice      float32 `json:"dayPrice" validation:"number"`
+	OwnerId       int         `json:"ownerId" validation:"required,number"`
+	CanBeRented   bool        `json:"canBeRented" validate:"required,boolean"`
+	TransportType string      `json:"transportType" validate:"required,oneof=Car Bike Scooter"`
+	Model         string      `json:"model" validate:"required"`
+	Color         string      `json:"color" validate:"required"`
+	Identifier    string      `json:"identifier" validate:"required"`
+	Description   null.String `json:"description" validate:"omitempty" swaggertype:"string"`
+	Latitude      float32     `json:"latitude" validate:"required,latitude"`
+	Longitude     float32     `json:"longitude" validate:"required,longitude"`
+	MinutePrice   null.Float  `json:"minutePrice" validate:"omitempty,number" swaggertype:"number"`
+	DayPrice      null.Float  `json:"dayPrice" validate:"omitempty,number" swaggertype:"number"`
 }
